--- a/ru/резюме.md
+++ b/ru/резюме.md
@@ -52,7 +52,7 @@
 ---
 
 ## **Языки**  
-- **Английский:** A2 (Elementary)  
+- **Английский:** A2 (Pre-intermediate)  
 - **Русский:** C2 (Proficiency)  
 
 ---
