--- a/ru/резюме.md
+++ b/ru/резюме.md
@@ -47,7 +47,10 @@
 - **2023 – Stepik**  
   - Интерактивный тренажер по SQL  
 - **2023 – Stepik**  
-  - Компьютерное зрение / библиотека OpenCV  
+  - Компьютерное зрение / библиотека OpenCV
+- **2024 - Stepik**
+  - Введение в SQL
+
 
 ---
 
